# sturdy-guacamole

./: pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
sturdy-guacamole/: HelloMe.py
